fix gap/margin/padding/font-size

--- a/source/sass/blocks/additional-list.scss
+++ b/source/sass/blocks/additional-list.scss
@@ -76,7 +76,7 @@
   line-height: 14px;
 
   @media (min-width: $desktop-width) {
-    width: 25%;
+    width: 30%;
   }
 }
 
