--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,10 +1,33 @@
 .catalog {
   padding: 27px 20px 25px 20px;
+
+  @media (min-width: $tablet-width) {
+    padding: 64px 30px 68px 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 188px 110px 75px 110px;
+  }
 }
 
 .catalog__title {
-  margin: 139px 0 19px 0;
+  margin: 0 0 19px 0;
   padding: 0 0 41px 0;
 
   border-bottom: 1px solid $special_grey-2;
+
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 1;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    font-weight: 400;
+    line-height: 1;
+
+    border-bottom: none;
+
+    padding: 0;
+    margin: 0 0 163px 0;
+  }
 }
